backend/overlays/dev/deployment-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journeyjinni-backend
  namespace: journeyjinni
spec:
  template:
    spec:
      containers:
      - name: journeyjinni-backend
        image: jinnicontainerregistry.azurecr.io/jinni
        ports:
        - containerPort: 8080
