backend/overlays/dev/Ingress-patches.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: journeyjinni-backend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: journeyjinni-backend
            port:
              number: 8080
